[project]
name = "erpnext_custom_docs"
version = "1.0.0"
description = "Professional print formats for all ERPNext document types"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "erpnext_custom_docs"

[tool.bench.dependencies]
frappe = ">=15.0.0 <16.0.0"
erpnext = ">=15.0.0 <16.0.0"
